--- a/03_wednesday/bibliography.bib
+++ b/03_wednesday/bibliography.bib
@@ -90,3 +90,10 @@ url={https://cran.r-project.org/web/packages/HMDHFDplus/index.html}
   year={1984},
   publisher={Springer}
 }
+
+@article{shkolnikov2017decomposition,
+  title={The decomposition of the difference between two healthy life expectancies. Which formula is right},
+  author={Shkolnikov, Vladimir M and Andreev, Evgeny M and others},
+  journal={Max Planck Institute for Demographic Research},
+  year={2017}
+}
