--- a/04_thursday/04_thursday.Rmd
+++ b/04_thursday/04_thursday.Rmd
@@ -3,7 +3,7 @@
 title: |
   | Barcelona Summer School of Demography
   | \vspace{1.5cm} \LARGE \emph{Module~2.~Demography with R}
-  | \vspace{0.3cm} \huge \textbf{3.~Standardization and decomposition}\vspace{0.6cm}
+  | \vspace{0.3cm} \huge \textbf{4.~Population growth}\vspace{0.6cm}
 fontsize: 11pt
 geometry: a4paper, twoside, left=2.5cm, right=2.5cm, top=3.2cm, bottom=2.8cm, headsep
   = 1.35cm, footskip = 1.6cm
@@ -58,6 +58,7 @@ Today, we're of course exploiting Marie-Piers labor once again. As usual I've ta
 
 # Matrix algebra: a brief review
 
+Matrix multiplication is not the same as artithmetic multiplation!
 ```{r}
 #Review of matrix algebra
 
@@ -68,28 +69,30 @@ Today, we're of course exploiting Marie-Piers labor once again. As usual I've ta
 #the number of rows on the right matrix
 
 #Example 1
-x<- matrix(c(1:9), ncol=3)
+x <- matrix(c(1:9), ncol=3)
 x
 
-y<- matrix(c(1:6), ncol=2)
+y <- matrix(c(1:6), ncol=2)
 y
 
-A<-x %*% y
+A <- x %*% y
 A
 
-A[1,1]
-sum(x[1,]*y[,1])
+A[1, 1]
+sum(x[1, ] * y[, 1])
 #Example 2
-x<- matrix(c(1,2,3), ncol=1)
+x <- matrix(c(1, 2, 3), ncol = 1)
 x
 
-y<- matrix(c(2,4,6), nrow=1)
+y <- matrix(c(2, 4, 6), nrow = 1)
 y
 
-A<-x %*% y
+A <- x %*% y
 A
+```
 
-
+Matrix addition and subtraction are element-wise. For this, dimensions should conform.
+```{r}
 #matrix addition
 
 B<-matrix(c(1:9), ncol=3)
@@ -98,16 +101,24 @@ C<-matrix(c(2:10), ncol=3)
 D<-A+B
 D[1,1]
 A[1,1]+B[1,1]
-
 ```
 
+Matrix powers are not the same as arithmetic powers!
+
+```{r}
+# install.packages("expm")
+library(expm)
+A %^% 3
+# arithmetic powers are element-wise
+A ^ 3
+```
 
 # Data
 
 We will use the Spanish data from the HMD [@HMD] and HFD [@HFD] for sections 2 and 3 of this class. Please load the following (this has been pasted in the google doc as well!):
 
 
-```{r}
+```{r, message = FALSE}
 
 #setwd()
 library(tidyverse)
@@ -311,6 +322,7 @@ exponential_growth <-
 #It we assume a close population (no migration)
 
 exponential_growth %>% 
+  select(-r_exp, -r_nat_exp) %>% 
   pivot_longer(-t, names_to = "type", values_to = "projection") %>% 
   mutate(projection = projection / 1e6) %>% 
   ggplot(aes(x = t, y = projection, color = type)) + 
@@ -379,7 +391,8 @@ $$
 
 
 ```{r}
-B <- B2014 %>% select(Age, Births)
+B <- B2014 %>% 
+  select(Age, Births)
 
 Fem <-
   ES2014 %>% 
@@ -407,14 +420,14 @@ $$
 
 
 ```{r}
-Fem %>% 
+NRR <-
+  Fem %>% 
   left_join(LT, by = "Age") %>% 
   select(Age, ASFR_f, Lx) %>% 
-  mutate(Lx = Lx / 1e5,
-         phi = Lx * ASFR_f) %>% 
-  summarize(NRR = sum(phi * Lx))
-
-
+  mutate(Lx = Lx / 1e5) %>% 
+  summarize(NRR = sum(Lx * ASFR_f)) %>% 
+  pull(NRR)
+NRR
 
 ```
 
@@ -533,7 +546,7 @@ $$
 
 #The last cell
 
-mat[nr,nr]<-(LT$Tx[nr]/LT$Tx[nr-1])
+mat[nr, nr]<-(LT$Tx[nr] / LT$Tx[nr - 1])
 
 ```
 * It's also common to put a zero in that corner
@@ -560,21 +573,30 @@ _nN_0^W(t+n) =\frac{_nL_0}{2*l_0} \frac{1}{1+SRB} \sum_{x=\alpha}^{\beta-n} {}_n
 $$
 where SRB is the sex ratio at birth.
 
-```{r, eval = FALSE}
+```{r}
+# get ASFR as vector
+ASFR <- 
+  ES2014 %>% 
+  filter(Sex == "Female") %>% 
+  select(-Births) %>% 
+  # this is the only difference from before
+  # in earlier chunk this was a right_join()
+  left_join(B, by = "Age") %>% 
+  mutate(Exposure = (P2014 + P2015) / 2,
+         ASFR = Births / Exposure,
+         ASFR = ifelse(is.na(ASFR), 0 , ASFR)) %>% 
+  pull(ASFR)
 
-#Create a vector
-ASFR2<-rep(0, nr)
-ASFR2[B2014$Age+1]<-ASFR
+# SRB and mortality discount constant 
+# across age of mother in N(0) equation
+PF    <- .4886 # or 0.4878049  = (1 / (1 + 1.05)
+const <- PF * (LT$Lx[2] / (2 * LT$lx[1]))
 
-#Constant across age of mother in N(0) equation
-const<- (1/(1+1.05))*(LT$Lx[2]/(2*LT$lx[1]))
+# Non-constant across mother age
+firstrow <- const * (ASFR + (lead(ASFR, default = 0) * c(Sx, 0)))
 
-#Non-constant across mother age
-firstrow <- const*(ASFR2[1:(nr-1)]+(ASFR2[2:nr]*surv[1:(nr-1)]))
-
-#Fill the first row
-mat[1,] <- c(firstrow,0)
-
+# Fill the first row
+mat[1, ] <- firstrow
 ```
 
 ### Projections
@@ -582,72 +604,63 @@ To forecast the population at time t (P(t)), for 1-year time interval, then
 
 $$P(t)=L^t * P(0)$$
 
-where L is the Leslie matrix.
+where $L$ is the Leslie matrix and `^` is a matrix power, NOT the kind of power that we're used to! We need `%^%` from the `expm` package to do this right. 
 
-NOTE: TR made it this far in the code edits! Updates to come after class session starting here!!!
-```{r error=F, message=F, warning=F, eval = FALSE}
+This can work inside a *tidy* framework just as we've done for everything so far in this block, and in this way avoid a bunch of loop-writing and indexing overhead.
 
-#Population at time 0
+```{r error=F, message=F, warning=F}
+# the projection
+Pt <-
+  ES2014 %>% 
+  filter(Sex == "Female") %>% 
+  select(Age, Population = P2015) %>% 
+  right_join(tibble(t = 0:200),
+             by = character()) %>% 
+  arrange(t, Age) %>% 
+  group_by(t) %>% 
+  mutate(Population = (mat %^% t[1]) %*% Population %>% c()) %>% 
+  ungroup()
+```
 
-P0<-matrix(P2015$Female, ncol=1)
+### visualize the results
 
-
-#Forecast
-time <- c(0:300)
-
-projection <- function(mat, time, pop){
-  for(i in 1:time){
-    if(i==1){project<-mat
-    proj <- project%*%pop}
-    if(i>1){project<- project%*% mat
-    proj<-project%*%pop}
-  }
-  return(proj)
-}
-
-proj.pop<- matrix(0, nrow(mat), length(time))
-for (i in 1:ncol(proj.pop)){
-  proj.pop[,i]<-projection(mat=mat, time=time[i], pop=P0)
-}
-
-
+```{r, message = FALSE}
+library(scales) # install if needed
 #Total population
-tot.pop<-colSums(proj.pop)
-
-plot(x=2015+time, y=tot.pop, type="l",
-     ylab="Population count", xlab="Year",
-     main="Population size for Spanish female forecast")
-
+Pt %>% 
+  group_by(t) %>% 
+  summarize(Population = sum(Population),
+            .groups = "drop") %>% 
+  mutate(Year = 2015 + t) %>% 
+  ggplot(aes(x = Year, y = Population)) + 
+  geom_line() + 
+  scale_y_continuous(labels = label_number(suffix = " M", scale = 1/1000000)) + 
+  labs(title = "Population size for Spanish female projection")
 
 #Number of births
+Pt %>% 
+  filter(Age == 0) %>% 
+  mutate(Year = 2015 + t) %>% 
+  ggplot(aes(x = Year, y = Population)) + 
+  geom_line() + 
+  scale_y_continuous(labels = label_number(suffix = " K", scale = 1/1000)) +
+  labs(title = "Number of births in Spanish female projection")
 
-birth<-proj.pop[1,]
+# structure in a given year
 
-plot(x=2015+time, y=birth, type="l",
-     ylab="Number of births", xlab="Year",
-     main="Number of births for Spanish female forecast")
-
-library(ggplot2)
-Age<-c(0:110)
-
-H<-10
-ggplot() + 
-  geom_bar(aes(x = Age, y = proj.pop[,H]), stat = "identity", fill="red") +
-  ylim(c(0, max(proj.pop)))+
+Pt %>% 
+  filter(t == 10) %>% 
+  ggplot() + 
+  geom_bar(aes(x = Age, 
+               y = Population), 
+               stat = "identity", 
+               fill = "#e32951",
+               width = 1) +
   ylab("Population counts")+
   coord_flip()+
-  ggtitle(paste("Population counts forecast in", 2015+H))+
-  theme_bw()
-
-
-H<-100
-ggplot() + 
-  geom_bar(aes(x = Age, y = proj.pop[,H]), stat = "identity", fill="red") +
-  ylim(c(0, max(proj.pop)))+
-  ylab("Population counts")+
-  coord_flip()+
-  ggtitle(paste("Population counts forecast in", 2015+H))+
-  theme_bw()
+  theme_bw() + 
+  scale_y_continuous(labels = label_number(suffix = " K", scale = 1/1000)) + 
+  labs(title = "Spanish female projection in year 2025")
 
 ```
 
@@ -655,56 +668,47 @@ ggplot() +
 
 ### Constant population structure and crude growth rate
 
-On the long term, the population age structure converges towards a constant age-structure.
+In the long term, the population age structure converges towards a constant age-structure.
 
-```{r, eval = FALSE}
+```{r}
+library(colorspace)
+Struct_t <- 
+  Pt %>% 
+  filter(t %% 20 == 0) %>% 
+  mutate(Year = 2015 + t) %>% 
+  group_by(t) %>% 
+  mutate(Structure = 100 * Population / sum(Population)) %>% 
+  ungroup()
 
-perc.pop<-sweep(proj.pop, 2, tot.pop, FUN="/")
-
-plot(x=2015+time, perc.pop[1,], type="l", ylim=c(0, 0.02),
-     ylab="Proportion", xlab="Year",
-     main="Proportion of Spanish female population at specific ages")
-lines(x=2015+time, perc.pop[26,], col=2)
-lines(x=2015+time, perc.pop[46,], col=3)
-lines(x=2015+time, perc.pop[66,], col=4)
-lines(x=2015+time, perc.pop[86,], col=6)
-legend("bottomleft", c("0", "25", "45", "65", "85"),
-       lty=1, col=c(1:4,6), bty="n", cex=0.7)
+Struct_t %>% 
+  ggplot(aes(x = Age, y = Structure, color = Year, group = Year)) +   geom_line(size = 2, alpha = .8) +
+  scale_color_continuous_sequential("BurgYl", begin = .2, end = 1)
 ```
 
 
-The crude growth rate also converges towards a constant over time in a stable population.
+The crude growth rate also converges towards a constant over time in a stable population. 
 
-```{r, eval = FALSE}
+```{r}
+CGRt <-
+  Pt %>% 
+  group_by(t) %>% 
+  summarize(Population = sum(Population),
+            .groups = "drop") %>% 
+  drop_na() %>% 
+  mutate(CGR = log(lead(Population) / Population)) 
 
-CGR.proj<-c(1:(length(time)-1))
-for(i in 1:length(CGR.proj)){
-  CGR.proj[i]<-log(sum(proj.pop[,i+1])/sum(proj.pop[,i]))
-}
-
-plot(2015+time[1:(length(time)-1)], CGR.proj, type="l",
-     ylab="CGR", xlab="Year",
-     main="Crude growth rate of Spanish female population")
+CGRt %>% 
+  ggplot(aes(x = t, y = CGR)) + 
+  geom_line() + 
+  labs(title = "Projected crude growth rate of Spanish female population") +
+  geom_hline(yintercept = log(NRR) / 33, color = "red") +
+  annotate("text", 
+           y = -0.0115, 
+           x = 100, 
+           label = "Tim's back of envelope guess from class", 
+           color = "red")
 
 ```
-
-
-
-# Exercises {-}
-
-1) Load 'LTFrance2015.txt', 'ASFRFrance2015.txt' and 'PopFrance2015.txt'.
-
-2) Calculate the TFR and NRR for France in 2015. Discuss if France reached the population replacement level in 2015.
-
-3) Create the Leslie matrix for French females in 2015.
-
-4) Project French females population 200 years ahead. What is the proportion of the 2015 population left 200 later?
-
-5) How did the age-structure change between 2015 and 2215? Older or younger?
-
-6) Calculate the CGR for France. Discuss your results in relation with the CGR for Spain found in the class. 
-
-
 
 # Eigenvalue as crude growth rate in stable populations {-}
 
@@ -726,7 +730,7 @@ where I is the identity matrix.
 
 For example (issued from @caswell2001matrix)
 
-```{r, eval = FALSE}
+```{r}
 
 #Example
 
@@ -748,26 +752,54 @@ lambda
 
 The intrinsic crude growth rate of a stable population is found by finding the eigenvalue of the Leslie matrix, $CGR = 1-\lambda$.
 
-```{r, eval = FALSE}
+```{r}
+# asymptotic growth rate
+r <- -(1-as.numeric(eigen(mat)$values[1]))
+r
+# crude growth after 200 years
+CGRt %>% 
+  slice(n()-1) %>% 
+  pull(CGR)
+# go another 100 years and it will get even closer!
 
--(1-as.numeric(eigen(mat)$values[1]))
-CGR.proj[length(time)-1]
+# back of envelope (change 33 to get closer)
+log(NRR) / 33
+ 
+# what would have been the perfect guess?
+log(NRR) / r
+```
+
+The *intrinsic* population structure is the first eigenvector of the Leslie matrix. If you rescale this, then you can compare it to the projected population structure. Eventually there would be perfect overlap.
+
+```{r}
+evec          <- eigen(mat)$vector[, 1] %>% Re()
+stable_struct <- tibble(Age = 0:110, 
+                        Stable = 100 * evec / sum(evec))
+Struct_t %>% 
+  filter(t == max(t)) %>% 
+  left_join(stable_struct, by = "Age") %>% 
+  pivot_longer(Structure:Stable, 
+               names_to = "variant", 
+               values_to = "Structure") %>% 
+  ggplot(aes(x = Age, y = Structure, color = variant, group = variant)) +
+  geom_line()
 
 ```
 
-The intrinsic population structure is the first eigenvector of the Leslie matrix.
+# Exercises {-}
 
-```{r, eval = FALSE}
+1) Load 'LTFrance2015.txt', 'ASFRFrance2015.txt' and 'PopFrance2015.txt'.
 
-prop<-eigen(mat)$vector[,1]/sum(eigen(mat)$vector[,1])
+2) Calculate the TFR and NRR for France in 2015. Discuss if France reached the population replacement level in 2015.
 
+3) Create the Leslie matrix for French females in 2015.
 
-plot(LT$Age, as.numeric(prop),
-     ylab="Age", xlab="Proportion",
-     main="Intrinsic population structure for stable population")
-lines(perc.pop[,300], col=2)
+4) Project French females population 200 years ahead. What is the proportion of the 2015 population left 200 later?
 
-```
+5) How did the age-structure change between 2015 and 2215? Older or younger?
+
+6) Calculate the CGR for France. Discuss your results in relation with the CGR for Spain found in the class. 
+
 
 
 
